testsuite/poke.pkl/acons-diag-2.pk
/* { dg-do compile } */

var a
  = string[] (1 + 2); /* { dg-error ".*\n.*" } */
